# rqcalc

./: .gitignore  Makefile  README.md  a.out  compile_commands.json  parser.py  pyproject.toml
.cache/clangd/index/: main.c.2E1976E46939FA13.idx  raygui.h.3368F98DC958BCE9.idx
data/: cards.json  equipment.json  seals.json  weapons.json
include/: enums.h  hero.h  items.h  stats.h  utils.h
src/: cJSON.c  main.c  stats.c
