[tool.poetry]
name = "rqcalc"
version = "0.1.0"
description = ""
authors = ["SerMeliodas <oliver9574@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
mwparserfromhell = "^0.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
